fix: corrige bug no código do autograd + feat: adiciona lib para vizualizar o grafo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "e>=1.4.5",
+    "graphviz>=0.21",
     "matplotlib>=3.10.8",
     "numpy>=2.4.0",
     "pandas>=2.3.3",
